--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22.0)
-project(sdcca VERSION 0.1.0 LANGUAGES C CXX)
+project(ocira VERSION 0.1.0 LANGUAGES C CXX)
 
 # Set global C++ standard
 set(CMAKE_CXX_STANDARD 17)
