Created ConnectionManager that makes connecting bus and component easier

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -4,6 +4,7 @@
 file(GLOB CORE_SRC_FILES 
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/components/*.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/managers/*.cpp"
 )
 
 add_library(ocira_core "${CORE_SRC_FILES}")
@@ -11,6 +12,7 @@ add_library(ocira_core "${CORE_SRC_FILES}")
 target_include_directories(ocira_core PUBLIC 
     "${CMAKE_CURRENT_SOURCE_DIR}/include"
     "${CMAKE_CURRENT_SOURCE_DIR}/include/components"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/managers"
 )
 
 message(STATUS "Armadillo include path: ${armadillo_SOURCE_DIR}/include")
@@ -32,6 +34,7 @@ if (BUILD_TESTING)
     file(GLOB CORE_TEST_FILES 
         "${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/test/components/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/test/managers/*.cpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/test/helpers/src/*.cpp"
     )
 
