--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -19,7 +19,7 @@ message(STATUS "Armadillo include path: ${armadillo_SOURCE_DIR}/include")
 
 target_include_directories(ocira_core PUBLIC ${armadillo_SOURCE_DIR}/include)
 find_library(ARMADILLO_LIB armadillo PATHS ${armadillo_BINARY_DIR} NO_DEFAULT_PATH)
-target_link_libraries(ocira_core PRIVATE ${ARMADILLO_LIB})
+target_link_libraries(ocira_core PRIVATE ${ARMADILLO_LIB} lapack blas)
 
 
 
